# snake_game

./: CMakeLists.txt  main.cpp  snake_game
include/: food.h  game.h  menu.h  point.h  snake.h
src/: food.cpp  game.cpp  menu.cpp  snake.cpp
